<resources>
    <!-- Static Titles -->
    <string name="satellite_name">Satellite Name</string>
    <string name="launch_date">01.12.2012</string>
    <string name="height_mass">Height/Mass: </string>
    <string name="cost">Cost: </string>
    <string name="last_position">Last Position: </string>

    <!-- Dynamic Placeholders -->
    <string name="satellite_name_placeholder">%1$s</string>
    <string name="launch_date_placeholder">%1$s</string>
    <string name="height_mass_placeholder">%1$d / %2$d</string>
    <string name="cost_placeholder">%1$,d</string>
    <string name="last_position_placeholder">(%1$.6f, %2$.6f)</string>
</resources>