<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.SatelliteDetailFragment"
    android:padding="@dimen/padding_large"
    android:background="@color/eyoj_gray_100">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_satellite_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            tools:text="@string/satellite_name"
            android:textSize="@dimen/text_size_large"
            android:fontFamily="@font/sofia_sans_extrabold"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/tv_launch_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/launch_date"
            android:textSize="@dimen/text_size_medium"
            android:fontFamily="@font/sofia_sans_medium"
            android:textColor="@color/eyoj_gray_600"
            android:alpha="0.6"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_large"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height_mass"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/eyoj_gray_600"
                android:fontFamily="@font/sofia_sans_extrabold" />

            <TextView
                android:id="@+id/tv_height_mass_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="110/1135000"
                android:textSize="@dimen/text_size_medium"
                android:fontFamily="@font/sofia_sans_medium"
                android:textColor="@color/eyoj_gray_600"
                android:layout_marginStart="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cost"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/eyoj_gray_600"
                android:fontFamily="@font/sofia_sans_extrabold"/>

            <TextView
                android:id="@+id/tv_cost_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="8.300.000"
                android:textSize="@dimen/text_size_medium"
                android:fontFamily="@font/sofia_sans_medium"
                android:textColor="@color/eyoj_gray_600"
                android:layout_marginStart="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_position"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/eyoj_gray_600"
                android:fontFamily="@font/sofia_sans_extrabold"/>

            <TextView
                android:id="@+id/tv_last_position_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="(0.864328541, 0.646450811)"
                android:textSize="@dimen/text_size_medium"
                android:fontFamily="@font/sofia_sans_medium"
                android:textColor="@color/eyoj_gray_600"
                android:layout_marginStart="4dp"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
